@@ -53,5 +53,6 @@ function (workers, reasons, keypair = credentials(), print = getOption('MTurkR.p
                 warning(i,": Invalid Request for worker ",workers[i])
         }
     }
+    Workers$Valid <- factor(Workers$Valid, levels=c('TRUE','FALSE'))
     return(Workers)
 }
