@@ -65,5 +65,6 @@ function (hit = NULL, hit.type = NULL, revert = FALSE, keypair = credentials(),
                 warning(i, ": Invalid Request for HIT ", hitlist[i])
         }
     }
+    HITs$Valid <- factor(HITs$Valid, levels=c('TRUE','FALSE'))
     return(HITs)
 }
